testdata/baselines/reference/submodule/compiler/esmModeDeclarationFileWithExportAssignment.errors.txt
other.d.mts(2,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== other.d.mts (1 errors) ====
    declare function example(): 5;
    export = example;
    ~~~~~~~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
    
==== main.mts (0 errors) ====
    import example from "./other.mjs";
    example();